--- a/widgets/calcstab.ui
+++ b/widgets/calcstab.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>813</width>
-    <height>480</height>
+    <height>494</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,10 +20,13 @@
       <string>Carrier Fuel / Range (assuming 1000 in tank)</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="8" column="0" colspan="2">
-       <widget class="QLabel" name="lblResult">
-        <property name="text">
-         <string/>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="sbCargo">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This includes any cargo on carrier, except tritium to use during flight.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="maximum">
+         <number>25000</number>
         </property>
        </widget>
       </item>
@@ -37,26 +40,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Modules Mass:</string>
-        </property>
-        <property name="buddy">
-         <cstring>sbModules</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QSpinBox" name="sbCargo">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This includes any cargo on carrier, except tritium to use during flight.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="maximum">
-         <number>25000</number>
-        </property>
-       </widget>
-      </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
@@ -67,7 +50,7 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="3">
+      <item row="5" column="0" colspan="4">
        <widget class="QGroupBox" name="groupBox_2">
         <property name="title">
          <string>Jump Mode:</string>
@@ -191,20 +174,13 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
-       <widget class="QCheckBox" name="cbKeepCargo">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked cargo is set to maximum possible value.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
         <property name="text">
-         <string>Keep all free space cargo</string>
+         <string>Modules Mass:</string>
         </property>
-       </widget>
-      </item>
-      <item row="7" column="0" colspan="2">
-       <widget class="QLabel" name="lblMass">
-        <property name="text">
-         <string/>
+        <property name="buddy">
+         <cstring>sbModules</cstring>
         </property>
        </widget>
       </item>
@@ -218,7 +194,14 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0" colspan="3">
+      <item row="7" column="0" colspan="2">
+       <widget class="QLabel" name="lblMass">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0" colspan="4">
        <widget class="QGroupBox" name="groupBox_4">
         <property name="title">
          <string>Jump Distance</string>
@@ -275,6 +258,46 @@
           </widget>
          </item>
         </layout>
+       </widget>
+      </item>
+      <item row="3" column="3">
+       <widget class="QCheckBox" name="cbKeepCargo">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If checked cargo is set to maximum possible value.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="text">
+         <string>Keep all free space cargo</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0" colspan="2">
+       <widget class="QLabel" name="lblResult">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="btnCarMods">
+        <property name="toolTip">
+         <string>Opens window to select installed modules on carrier.</string>
+        </property>
+        <property name="text">
+         <string>Carrier's Modules</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources.qrc">
+          <normaloff>:/images/carrier-waybill-query-128.png</normaloff>:/images/carrier-waybill-query-128.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="toolButtonStyle">
+         <enum>Qt::ToolButtonFollowStyle</enum>
+        </property>
        </widget>
       </item>
      </layout>
@@ -357,6 +380,8 @@
   <tabstop>leSys2</tabstop>
   <tabstop>distCalc</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
