--- a/widgets/calcstab.ui
+++ b/widgets/calcstab.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>813</width>
-    <height>494</height>
+    <height>499</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,6 +56,19 @@
          <string>Jump Mode:</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
          <item>
           <widget class="QRadioButton" name="rbTankFull">
            <property name="text">
@@ -277,7 +290,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="3">
        <widget class="QToolButton" name="btnCarMods">
         <property name="toolTip">
          <string>Opens window to select installed modules on carrier.</string>
