--- a/resources.qrc
+++ b/resources.qrc
@@ -10,5 +10,14 @@
         <file>images/Undo.png</file>
         <file>images/Start here.png</file>
         <file>images/carrier-waybill-query-128.png</file>
+        <file>style_sheets/Amoled.qss</file>
+        <file>style_sheets/Aqua.qss</file>
+        <file>style_sheets/ConsoleStyle.qss</file>
+        <file>style_sheets/ElegantDark.qss</file>
+        <file>style_sheets/MacOS.qss</file>
+        <file>style_sheets/ManjaroMix.qss</file>
+        <file>style_sheets/MaterialDark.qss</file>
+        <file>style_sheets/NeonButtons.qss</file>
+        <file>style_sheets/Ubuntu.qss</file>
     </qresource>
 </RCC>
